Add retrieve methods to some objects, implement api for custom retrieval strategies